--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
          <div class="col-12 col-lg-7">
             <h1>About Us</h1>
-            <a href="https://web24service.com/work/themeforest/w-shipping/index.php" title="Home">Home</a> / About Us
+            <a href="#" title="Home">Home</a> / About Us
          </div>
          <div class="col-12 col-lg-5 text-right"><h4>We freight to all over the world
 The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
@@ -55,28 +55,28 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
         <div class="col-12 col-lg-3">
           <div class="left-block left-menu">
             <ul>
-              <li class="active"><a href="https://web24service.com/work/themeforest/w-shipping/about" title="Company Overview">Company Overview</a></li>
-              <li><a href="https://web24service.com/work/themeforest/w-shipping/about" title="Aspiration &amp; Vision">Aspiration &amp; Vision</a></li>
-              <li><a href="https://web24service.com/work/themeforest/w-shipping/about" title="Strength">Strength</a></li>
-              <li><a href="https://web24service.com/work/themeforest/w-shipping/about" title="Quality Policy">Quality Policy</a></li>
+              <li class="active"><a href="#/work/themeforest/w-shipping/about" title="Company Overview">Company Overview</a></li>
+              <li><a href="#/work/themeforest/w-shipping/about" title="Aspiration &amp; Vision">Aspiration &amp; Vision</a></li>
+              <li><a href="#/work/themeforest/w-shipping/about" title="Strength">Strength</a></li>
+              <li><a href="#/work/themeforest/w-shipping/about" title="Quality Policy">Quality Policy</a></li>
             </ul>
           </div>
           <div class="left-block wow fadeInUp" style="visibility: visible; animation-name: none;">
             <h3 class="heading3-border text-uppercase">Latest News</h3>
-            <div class="latest-news-section"> <a href="https://web24service.com/work/themeforest/w-shipping/about" title="">
+            <div class="latest-news-section"> <a href="#/work/themeforest/w-shipping/about" title="">
               <div class="news-date">28<span>Feb</span></div>
               <h4>News Title</h4>
               <div class="news-post-by">By <span>Admin</span></div>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
               </a> </div>
-            <div class="latest-news-section"> <a href="https://web24service.com/work/themeforest/w-shipping/about" title="">
+            <div class="latest-news-section"> <a href="#/work/themeforest/w-shipping/about" title="">
               <div class="news-date">28<span>Feb</span></div>
               <h4>News Title</h4>
               <div class="news-post-by">By <span>Admin</span></div>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
               </a> </div>
           </div>
-          <div class="left-block wow fadeInUp" style="visibility: visible; animation-name: none;"> <a href="https://web24service.com/work/themeforest/w-shipping/about#" class="wshipping-button">Send Us Quote</a> </div>
+          <div class="left-block wow fadeInUp" style="visibility: visible; animation-name: none;"> <a href="#/work/themeforest/w-shipping/about#" class="wshipping-button">Send Us Quote</a> </div>
           <div class="left-block wow fadeInUp" style="visibility: visible; animation-name: none;">
             <h3 class="heading3-border text-uppercase">Clients Testimonial</h3>
             <div class="owl-carousel testimonial owl-loaded">
@@ -202,7 +202,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
             <div class="team-image"> <img src="./about_us_files/team-member-1.jpg" alt="">
               <div class="team-figure">
                 <div class="item-table">
-                  <div class="item-tablecell"> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-facebook-f"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-twitter"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-skype"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-linkedin"></i></a> </div>
+                  <div class="item-tablecell"> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-facebook-f"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-twitter"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-skype"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-linkedin"></i></a> </div>
                 </div>
               </div>
             </div>
@@ -217,7 +217,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
             <div class="team-image"> <img src="./about_us_files/team-member-2.jpg" alt="">
               <div class="team-figure">
                 <div class="item-table">
-                  <div class="item-tablecell"> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-facebook-f"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-twitter"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-skype"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-linkedin"></i></a> </div>
+                  <div class="item-tablecell"> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-facebook-f"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-twitter"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-skype"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-linkedin"></i></a> </div>
                 </div>
               </div>
             </div>
@@ -232,7 +232,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
             <div class="team-image"> <img src="./about_us_files/team-member-3.jpg" alt="">
               <div class="team-figure">
                 <div class="item-table">
-                  <div class="item-tablecell"> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-facebook-f"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-twitter"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-skype"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-linkedin"></i></a> </div>
+                  <div class="item-tablecell"> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-facebook-f"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-twitter"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-skype"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-linkedin"></i></a> </div>
                 </div>
               </div>
             </div>
@@ -247,7 +247,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
             <div class="team-image"> <img src="./about_us_files/team-member-4.jpg" alt="">
               <div class="team-figure">
                 <div class="item-table">
-                  <div class="item-tablecell"> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-facebook-f"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-twitter"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-skype"></i></a> <a href="https://web24service.com/work/themeforest/w-shipping/about" title=""><i class="fab fa-linkedin"></i></a> </div>
+                  <div class="item-tablecell"> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-facebook-f"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-twitter"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-skype"></i></a> <a href="#/work/themeforest/w-shipping/about" title=""><i class="fab fa-linkedin"></i></a> </div>
                 </div>
               </div>
             </div>
