--- a/app/views/page/car_shipping.html.erb
+++ b/app/views/page/car_shipping.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
          <div class="col-12 col-lg-7">
             <h1>Car Shipping Service</h1>
-            <a href="https://web24service.com/work/themeforest/w-shipping/index.php" title="Home">Home</a> / Car Shipping Service
+            <a href="#" title="Home">Home</a> / Car Shipping Service
          </div>
          <div class="col-12 col-lg-5 text-right"><h4>We freight to all over the world
 The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
@@ -67,8 +67,8 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
          <!-- single service content start -->
          <div class="col-12 col-lg-7">
             <div class="download-pdf">
-               <a href="https://web24service.com/work/themeforest/w-shipping/car-single-service" title="" class="wshipping-button download-btn"><i class="fa fa-file-pdf-o"></i> Download Boucher</a>
-               <a href="https://web24service.com/work/themeforest/w-shipping/car-single-service" title="" class="wshipping-button download-btn"><i class="fa fa-file-pdf-o"></i> Download Pricelist</a>
+               <a href="#/work/themeforest/w-shipping/car-single-service" title="" class="wshipping-button download-btn"><i class="fa fa-file-pdf-o"></i> Download Boucher</a>
+               <a href="#/work/themeforest/w-shipping/car-single-service" title="" class="wshipping-button download-btn"><i class="fa fa-file-pdf-o"></i> Download Pricelist</a>
             </div>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p> 
 
@@ -85,7 +85,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
          <div class="col-12 col-lg-5">
             <div class="right-quote-from">
                <h3>Get a quote on Renovation</h3>
-               <form action="https://web24service.com/work/themeforest/w-shipping/single-services.html">
+               <form action="#/work/themeforest/w-shipping/single-services.html">
                   <div class="form-group">
                     <input type="text" class="form-control" placeholder="Your Full Name">
                   </div>  
