--- a/app/views/page/current_shipment.html.erb
+++ b/app/views/page/current_shipment.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
          <div class="col-12 col-lg-7">
             <h1>Current Shipment</h1>
-            <a href="https://web24service.com/work/themeforest/w-shipping/index.php" title="Home">Home</a> / Current Shipment
+            <a href="#" title="Home">Home</a> / Current Shipment
          </div>
          <div class="col-12 col-lg-5 text-right"><h4>We freight to all over the world
 The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
@@ -43,7 +43,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                     <td>10kg</td>
                     <td>Y</td>
                     <td>Processing</td>
-                    <td><a href="https://web24service.com/work/themeforest/w-shipping/current-shipment" title=""><i class="fa fa-check-circle" aria-hidden="true"></i></a></td>
+                    <td><a href="#/work/themeforest/w-shipping/current-shipment" title=""><i class="fa fa-check-circle" aria-hidden="true"></i></a></td>
                   </tr>
                   <tr>
                     <td>2</td>
@@ -53,7 +53,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                     <td>10kg</td>
                     <td>Y</td>
                     <td>Confirm</td>
-                    <td><a href="https://web24service.com/work/themeforest/w-shipping/current-shipment" title=""><i class="far fa-trash-alt" aria-hidden="true"></i></a></td>
+                    <td><a href="#/work/themeforest/w-shipping/current-shipment" title=""><i class="far fa-trash-alt" aria-hidden="true"></i></a></td>
                   </tr>
                   <tr>
                     <td>3</td>
@@ -63,7 +63,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                     <td>10kg</td>
                     <td>Y</td>
                     <td>Processing</td>
-                    <td><a href="https://web24service.com/work/themeforest/w-shipping/current-shipment" title=""><i class="fa fa-check-circle" aria-hidden="true"></i></a></td>
+                    <td><a href="#/work/themeforest/w-shipping/current-shipment" title=""><i class="fa fa-check-circle" aria-hidden="true"></i></a></td>
                   </tr>
                 </tbody>
               </table>
@@ -75,12 +75,12 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
             <div class="right-block left-menu menu-with-title mt60 mb15">
                <h4 class="title-with-bg">Select Your Freight</h4>
                <ul>
-                  <li class="active"><a href="https://web24service.com/work/themeforest/w-shipping/current-shipment" title="Air Freight Tracking">Air Freight Tracking</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/current-shipment" title="Ocean Freight Tracking">Ocean Freight Tracking</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/current-shipment" title="Road &amp; Rail Freight Tracking">Road &amp; Rail Freight Tracking</a></li>
+                  <li class="active"><a href="#/work/themeforest/w-shipping/current-shipment" title="Air Freight Tracking">Air Freight Tracking</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/current-shipment" title="Ocean Freight Tracking">Ocean Freight Tracking</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/current-shipment" title="Road &amp; Rail Freight Tracking">Road &amp; Rail Freight Tracking</a></li>
                </ul>
             </div>
-               <a href="https://web24service.com/work/themeforest/w-shipping/current-shipment#" class="order-list-button">Your Order List</a>
+               <a href="#/work/themeforest/w-shipping/current-shipment#" class="order-list-button">Your Order List</a>
          </div>
          <!-- Right sidebar end -->
       </div>
@@ -93,7 +93,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
     <div class="container">
       <div class="row">
         <div class="col-12 col-lg-8"><h4>We Are Always In Here, <span>Need any Help?</span></h4></div>
-        <div class="col-12 col-lg-4"><a href="https://web24service.com/work/themeforest/w-shipping/contact.php" title="" class="wshipping-button">Contact With Us</a></div>
+        <div class="col-12 col-lg-4"><a href="#/work/themeforest/w-shipping/contact.php" title="" class="wshipping-button">Contact With Us</a></div>
       </div>
     </div>
   </div>
@@ -117,7 +117,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Ocean Freight Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/current-shipment" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/current-shipment" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
@@ -128,7 +128,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Air Freight Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/current-shipment" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/current-shipment" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
@@ -139,7 +139,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Car Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/current-shipment" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/current-shipment" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
