--- a/app/views/page/shipment_tracking.html.erb
+++ b/app/views/page/shipment_tracking.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
          <div class="col-12 col-lg-7">
             <h1>Tracking</h1>
-            <a href="https://web24service.com/work/themeforest/w-shipping/index.php" title="Home">Home</a> / Tracking
+            <a href="#" title="Home">Home</a> / Tracking
          </div>
          <div class="col-12 col-lg-5 text-right"><h4>We freight to all over the world
 The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
@@ -28,23 +28,23 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
          <div class="col-12 col-lg-9">
             <div class="tracking-block">
                <ul class="nav nav-tabs" role="tablist">
-                 <li class="nav-item"><a class="nav-link active" href="https://web24service.com/work/themeforest/w-shipping/tracking#track-by-number" aria-controls="track-by-number" role="tab" data-toggle="tab">Track by Number</a></li>
-                 <li class="nav-item"><a class="nav-link" href="https://web24service.com/work/themeforest/w-shipping/tracking#track-by-reference" aria-controls="track-by-reference" role="tab" data-toggle="tab">Track by Reference</a></li>
+                 <li class="nav-item"><a class="nav-link active" href="#" aria-controls="track-by-number" role="tab" data-toggle="tab">Track by Number</a></li>
+                 <li class="nav-item"><a class="nav-link" href="#/work/themeforest/w-shipping/tracking#track-by-reference" aria-controls="track-by-reference" role="tab" data-toggle="tab">Track by Reference</a></li>
               </ul>
               <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="track-by-number">
                  <h3>Air Freight Tracking</h3>
                  <div class="put-track-number">
-                 <form action="https://web24service.com/work/themeforest/w-shipping/track.html">
+                 <form action="#/work/themeforest/w-shipping/track.html">
                    <input type="text" class="form-control track-id" name="trackid" placeholder="Track ID">
                    <button type="submit" class="btn btn-track">Track</button>
                  </form>
                 </div>
-                <div class="track-bottom-link"><a href="https://web24service.com/work/themeforest/w-shipping/tracking">Need Help?</a> <span>|</span> <a href="https://web24service.com/work/themeforest/w-shipping/tracking">Your Order list</a></div>
+                <div class="track-bottom-link"><a href="#/work/themeforest/w-shipping/tracking">Need Help?</a> <span>|</span> <a href="#/work/themeforest/w-shipping/tracking">Your Order list</a></div>
                </div>
                <div role="tabpanel" class="tab-pane" id="track-by-reference">
                 <div class="put-reference-number">
-                 <form action="https://web24service.com/work/themeforest/w-shipping/customer-register.html">
+                 <form action="#/work/themeforest/w-shipping/customer-register.html">
                   <div class="form-group">
                     <div class="row">
                       <div class="col-12 col-md-6 col-lg-4">
@@ -113,9 +113,9 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
             <div class="right-block left-menu menu-with-title mt40">
                <h4 class="title-with-bg">Select Your Freight</h4>
                <ul>
-                  <li class="active"><a href="https://web24service.com/work/themeforest/w-shipping/tracking" title="Air Freight Tracking">Air Freight Tracking</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/tracking" title="Ocean Freight Tracking">Ocean Freight Tracking</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/tracking" title="Road &amp; Rail Freight Tracking">Road &amp; Rail Freight Tracking</a></li>
+                  <li class="active"><a href="#/work/themeforest/w-shipping/tracking" title="Air Freight Tracking">Air Freight Tracking</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/tracking" title="Ocean Freight Tracking">Ocean Freight Tracking</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/tracking" title="Road &amp; Rail Freight Tracking">Road &amp; Rail Freight Tracking</a></li>
                </ul>
             </div>
          </div>
@@ -130,7 +130,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
     <div class="container">
       <div class="row">
         <div class="col-md-8"><h4>We Are Always In Here, <span>Need any Help?</span></h4></div>
-        <div class="col-md-4 text-right"><a href="https://web24service.com/work/themeforest/w-shipping/contact.html" title="" class="wshipping-button">Contact With Us</a></div>
+        <div class="col-md-4 text-right"><a href="#/work/themeforest/w-shipping/contact.html" title="" class="wshipping-button">Contact With Us</a></div>
       </div>
     </div>
   </div>
@@ -154,7 +154,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Ocean Freight Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/tracking" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/tracking" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
@@ -165,7 +165,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Air Freight Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/tracking" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/tracking" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
@@ -176,7 +176,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Car Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/tracking" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/tracking" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
