--- a/app/views/page/blog.html.erb
+++ b/app/views/page/blog.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
          <div class="col-12 col-lg-7">
             <h1>Blog</h1>
-            <a href="https://web24service.com/work/themeforest/w-shipping/index.php" title="Home">Home</a> / Blog
+            <a href="#" title="Home">Home</a> / Blog
          </div>
          <div class="col-12 col-lg-5 text-right"><h4>We freight to all over the world
 The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
@@ -23,20 +23,20 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
             <div class="blog-image-bg blog-image-1"></div>
             <div class="blog-content">
               <div class="blog-date">Mar <span>26</span> 2017</div>
-              <h3><a href="https://web24service.com/work/themeforest/w-shipping/blog-page#" title="">Shipping container all international transport</a></h3>
+              <h3><a href="#/work/themeforest/w-shipping/blog-page#" title="">Shipping container all international transport</a></h3>
               <div class="blog-post-by">
                 <ul>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-user"></i> Posted By Razu Ahmed</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i> 10 favorites</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i> 12 comments</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-user"></i> Posted By Razu Ahmed</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i> 10 favorites</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i> 12 comments</a></li>
                 </ul>
               </div>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor aeneanssa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Etiam rhoncus maecenas tempus tellus eget.</p>
             </div>
-            <div class="continue-read-blog"><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title="">Continue Reading <i class="fa fa-angle-right"></i></a></div>
+            <div class="continue-read-blog"><a href="#/work/themeforest/w-shipping/blog-page" title="">Continue Reading <i class="fa fa-angle-right"></i></a></div>
             <div class="blog-action">
-              <div class="blog-action-holder"><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-up"></i></a><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-down"></i></a></div>
-              <div class="blog-action-holder"><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i></a><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-share-alt"></i></a><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i></a></div>
+              <div class="blog-action-holder"><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-up"></i></a><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-down"></i></a></div>
+              <div class="blog-action-holder"><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i></a><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-share-alt"></i></a><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i></a></div>
             </div>
           </div>
           <!-- blog iteam end -->
@@ -46,20 +46,20 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
             <div class="blog-image-bg blog-image-2"></div>
             <div class="blog-content">
               <div class="blog-date">Mar <span>26</span> 2017</div>
-              <h3><a href="https://web24service.com/work/themeforest/w-shipping/blog-page#" title="">Shipping container all international transport</a></h3>
+              <h3><a href="#/work/themeforest/w-shipping/blog-page#" title="">Shipping container all international transport</a></h3>
               <div class="blog-post-by">
                 <ul>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-user"></i> Posted By Razu Ahmed</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i> 10 favorites</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i> 12 comments</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-user"></i> Posted By Razu Ahmed</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i> 10 favorites</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i> 12 comments</a></li>
                 </ul>
               </div>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor aeneanssa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Etiam rhoncus maecenas tempus tellus eget.</p>
             </div>
-            <div class="continue-read-blog"><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title="">Continue Reading <i class="fa fa-angle-right"></i></a></div>
+            <div class="continue-read-blog"><a href="#/work/themeforest/w-shipping/blog-page" title="">Continue Reading <i class="fa fa-angle-right"></i></a></div>
             <div class="blog-action">
-              <div class="blog-action-holder"><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-up"></i></a><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-down"></i></a></div>
-              <div class="blog-action-holder"><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i></a><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-share-alt"></i></a><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i></a></div>
+              <div class="blog-action-holder"><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-up"></i></a><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-down"></i></a></div>
+              <div class="blog-action-holder"><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i></a><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-share-alt"></i></a><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i></a></div>
             </div>
           </div>
           <!-- blog iteam end -->
@@ -69,20 +69,20 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
             <div class="blog-image-bg blog-image-3"></div>
             <div class="blog-content">
               <div class="blog-date">Mar <span>26</span> 2017</div>
-              <h3><a href="https://web24service.com/work/themeforest/w-shipping/blog-page#" title="">Shipping container all international transport</a></h3>
+              <h3><a href="#/work/themeforest/w-shipping/blog-page#" title="">Shipping container all international transport</a></h3>
               <div class="blog-post-by">
                 <ul>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-user"></i> Posted By Razu Ahmed</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i> 10 favorites</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i> 12 comments</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-user"></i> Posted By Razu Ahmed</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i> 10 favorites</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i> 12 comments</a></li>
                 </ul>
               </div>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor aeneanssa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Etiam rhoncus maecenas tempus tellus eget.</p>
             </div>
-            <div class="continue-read-blog"><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title="">Continue Reading <i class="fa fa-angle-right"></i></a></div>
+            <div class="continue-read-blog"><a href="#/work/themeforest/w-shipping/blog-page" title="">Continue Reading <i class="fa fa-angle-right"></i></a></div>
             <div class="blog-action">
-              <div class="blog-action-holder"><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-up"></i></a><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-down"></i></a></div>
-              <div class="blog-action-holder"><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i></a><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-share-alt"></i></a><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i></a></div>
+              <div class="blog-action-holder"><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-up"></i></a><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-thumbs-down"></i></a></div>
+              <div class="blog-action-holder"><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-heart"></i></a><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="fa fa-share-alt"></i></a><a href="#/work/themeforest/w-shipping/blog-page" title=""><i class="far fa-comments"></i></a></div>
             </div>
           </div>
           <!-- blog iteam end -->
@@ -91,11 +91,11 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
           <div class="page-navigation">
             <nav aria-label="Page navigation example">
               <ul class="pagination mt40 justify-content-center">
-                <li class="page-item disabled"> <a class="page-link" href="https://web24service.com/work/themeforest/w-shipping/blog-page#" tabindex="-1"><i class="fa fa-angle-left" aria-hidden="true"></i></a> </li>
-                <li class="page-item pagin-active"><a class="page-link" href="https://web24service.com/work/themeforest/w-shipping/blog-page#">1</a></li>
-                <li class="page-item"><a class="page-link" href="https://web24service.com/work/themeforest/w-shipping/blog-page#">2</a></li>
-                <li class="page-item"><a class="page-link" href="https://web24service.com/work/themeforest/w-shipping/blog-page#">3</a></li>
-                <li class="page-item"> <a class="page-link" href="https://web24service.com/work/themeforest/w-shipping/blog-page#"><i class="fa fa-angle-right" aria-hidden="true"></i></a> </li>
+                <li class="page-item disabled"> <a class="page-link" href="#/work/themeforest/w-shipping/blog-page#" tabindex="-1"><i class="fa fa-angle-left" aria-hidden="true"></i></a> </li>
+                <li class="page-item pagin-active"><a class="page-link" href="#/work/themeforest/w-shipping/blog-page#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#/work/themeforest/w-shipping/blog-page#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#/work/themeforest/w-shipping/blog-page#">3</a></li>
+                <li class="page-item"> <a class="page-link" href="#/work/themeforest/w-shipping/blog-page#"><i class="fa fa-angle-right" aria-hidden="true"></i></a> </li>
               </ul>
             </nav>
           </div>
@@ -105,39 +105,39 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
         <!-- Blog sidebar start -->
         <div class="col-12 col-lg-3">
           <div class="cat-Search">
-            <form action="https://web24service.com/work/themeforest/w-shipping/index.html">
+            <form action="#/work/themeforest/w-shipping/index.html">
               <input type="search" placeholder="Enter kyewords.." class="form-control">
             </form>
           </div>
           <div class="left-block left-menu menu-with-title">
             <h4 class="title-with-bg">Category</h4>
             <ul>
-              <li class="active"><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title="Sea Freight">Sea Freight</a></li>
-              <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title="Railway Logistics">Railway Logistics</a></li>
-              <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title="Cargo Services">Cargo Services</a></li>
-              <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title="Latest Shipments">Latest Shipments</a></li>
+              <li class="active"><a href="#/work/themeforest/w-shipping/blog-page" title="Sea Freight">Sea Freight</a></li>
+              <li><a href="#/work/themeforest/w-shipping/blog-page" title="Railway Logistics">Railway Logistics</a></li>
+              <li><a href="#/work/themeforest/w-shipping/blog-page" title="Cargo Services">Cargo Services</a></li>
+              <li><a href="#/work/themeforest/w-shipping/blog-page" title="Latest Shipments">Latest Shipments</a></li>
             </ul>
           </div>
           <div class="left-block letest-post">
             <h4 class="title-with-bg bg-black">Latest post</h4>
             <ul>
-              <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""> <img src="./blog_files/latest-post1.jpg" alt="post1">
+              <li><a href="#/work/themeforest/w-shipping/blog-page" title=""> <img src="./blog_files/latest-post1.jpg" alt="post1">
                 <p>Lorem Ipsum is simply dummy text of the printing</p>
                 <span>9th September 2016</span> </a></li>
-              <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""> <img src="./blog_files/latest-post1.jpg" alt="post1">
+              <li><a href="#/work/themeforest/w-shipping/blog-page" title=""> <img src="./blog_files/latest-post1.jpg" alt="post1">
                 <p>Lorem Ipsum is simply dummy text of the printing</p>
                 <span>9th September 2016</span> </a></li>
-              <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""> <img src="./blog_files/latest-post1.jpg" alt="post1">
+              <li><a href="#/work/themeforest/w-shipping/blog-page" title=""> <img src="./blog_files/latest-post1.jpg" alt="post1">
                 <p>Lorem Ipsum is simply dummy text of the printing</p>
                 <span>9th September 2016</span> </a></li>
-              <li><a href="https://web24service.com/work/themeforest/w-shipping/blog-page" title=""> <img src="./blog_files/latest-post1.jpg" alt="post1">
+              <li><a href="#/work/themeforest/w-shipping/blog-page" title=""> <img src="./blog_files/latest-post1.jpg" alt="post1">
                 <p>Lorem Ipsum is simply dummy text of the printing</p>
                 <span>9th September 2016</span> </a></li>
             </ul>
           </div>
           <div class="left-block blog-tag">
             <h3 class="heading3-border text-uppercase">Tags</h3>
-            <a href="https://web24service.com/work/themeforest/w-shipping/blog-page#" title="Logistics">Logistics</a> <a href="https://web24service.com/work/themeforest/w-shipping/blog-page#" title="How To Build">How To Build</a> <a href="https://web24service.com/work/themeforest/w-shipping/blog-page#" title="Curgo Services">Curgo Services</a> <a href="https://web24service.com/work/themeforest/w-shipping/blog-page#" title="Tips">Tips</a> <a href="https://web24service.com/work/themeforest/w-shipping/blog-page#" title="Latest Offers">Latest Offers</a> <a href="https://web24service.com/work/themeforest/w-shipping/blog-page#" title="Sea &amp; Trucking">Sea &amp; Trucking</a> </div>
+            <a href="#/work/themeforest/w-shipping/blog-page#" title="Logistics">Logistics</a> <a href="#/work/themeforest/w-shipping/blog-page#" title="How To Build">How To Build</a> <a href="#/work/themeforest/w-shipping/blog-page#" title="Curgo Services">Curgo Services</a> <a href="#/work/themeforest/w-shipping/blog-page#" title="Tips">Tips</a> <a href="#/work/themeforest/w-shipping/blog-page#" title="Latest Offers">Latest Offers</a> <a href="#/work/themeforest/w-shipping/blog-page#" title="Sea &amp; Trucking">Sea &amp; Trucking</a> </div>
         </div>
         <!-- Blog sidebar end -->
       </div>
