--- a/app/views/page/service.html.erb
+++ b/app/views/page/service.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
          <div class="col-12 col-lg-7">
             <h1>Our Services</h1>
-            <a href="https://web24service.com/work/themeforest/w-shipping/index.php" title="Home">Home</a> / Our Services
+            <a href="#" title="Home">Home</a> / Our Services
          </div>
          <div class="col-12 col-lg-5 text-right"><h4>We freight to all over the world
 The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
@@ -31,7 +31,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Ocean Freight Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
@@ -42,7 +42,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Air Freight Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
@@ -53,7 +53,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Car Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
@@ -64,7 +64,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Car Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
@@ -75,7 +75,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Ocean Freight Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
@@ -86,7 +86,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Air Freight Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/services" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
