--- a/app/views/page/shipment_status.html.erb
+++ b/app/views/page/shipment_status.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
          <div class="col-12 col-lg-7">
             <h1>Your shipment progress</h1>
-            <a href="https://web24service.com/work/themeforest/w-shipping/index.php" title="Home">Home</a> / Your shipment progress
+            <a href="#" title="Home">Home</a> / Your shipment progress
          </div>
          <div class="col-12 col-lg-5 text-right"><h4>We freight to all over the world
 The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
@@ -46,12 +46,12 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
             <div class="right-block left-menu menu-with-title mt60 mb15">
                <h4 class="title-with-bg">Select Your Freight</h4>
                <ul>
-                  <li class="active"><a href="https://web24service.com/work/themeforest/w-shipping/track-result" title="Air Freight Tracking">Air Freight Tracking</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/track-result" title="Ocean Freight Tracking">Ocean Freight Tracking</a></li>
-                  <li><a href="https://web24service.com/work/themeforest/w-shipping/track-result" title="Road &amp; Rail Freight Tracking">Road &amp; Rail Freight Tracking</a></li>
+                  <li class="active"><a href="#/work/themeforest/w-shipping/track-result" title="Air Freight Tracking">Air Freight Tracking</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/track-result" title="Ocean Freight Tracking">Ocean Freight Tracking</a></li>
+                  <li><a href="#/work/themeforest/w-shipping/track-result" title="Road &amp; Rail Freight Tracking">Road &amp; Rail Freight Tracking</a></li>
                </ul>
             </div>
-               <a href="https://web24service.com/work/themeforest/w-shipping/track-result#" class="order-list-button">Your Order List</a>
+               <a href="#/work/themeforest/w-shipping/track-result#" class="order-list-button">Your Order List</a>
          </div>
          <!-- Right sidebar end -->
       </div>
@@ -64,7 +64,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
     <div class="container">
       <div class="row">
         <div class="col-12 col-lg-8"><h4>We Are Always In Here, <span>Need any Help?</span></h4></div>
-        <div class="col-12 col-lg-4 text-right"><a href="https://web24service.com/work/themeforest/w-shipping/contact.php" title="" class="wshipping-button">Contact With Us</a></div>
+        <div class="col-12 col-lg-4 text-right"><a href="#/work/themeforest/w-shipping/contact.php" title="" class="wshipping-button">Contact With Us</a></div>
       </div>
     </div>
   </div>
@@ -88,7 +88,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Ocean Freight Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/track-result" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/track-result" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
@@ -99,7 +99,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Air Freight Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/track-result" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/track-result" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
@@ -110,7 +110,7 @@ The best logistic company, <span>FAST</span> and <span>SAFELY!</span></h4></div>
                <div class="service-content">
                   <h3>Car Shipping</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
-                  <a href="https://web24service.com/work/themeforest/w-shipping/track-result" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
+                  <a href="#/work/themeforest/w-shipping/track-result" title="" class="readmore-btn">Read more <i class="fa fa-angle-right"></i></a>
                   <div class="location_map"><i class="fa fa-plus"></i></div>
                </div>
             </div>
